# Airshipper

./: .airshipper-env.example  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PACKAGING.md  README.md  TROUBLESHOOTING.md  WORKFLOW.md  default.nix  docker-compose.yml  flake.nix  msi_installer.ps1  publish_server.sh  rust-toolchain  rustfmt.toml  server_list.ron  shell.nix  test_all.ps1
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: artifacts.yml  check.yml  ci.yaml  fmt.yml  images.yml  mirror.yml  release.yml
.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml  recompile.yml  release.yml
.gitlab/issue_templates/: Bug.md
client/: Cargo.toml  build.rs
client/assets/: net.veloren.airshipper.metainfo.xml
client/assets/icons/: ping1.pdn  ping2.pdn
client/nsis/: installer.nsi  update_installer_version.sh
client/src/: assets.rs  channels.rs  consts.rs  downloadbar.rs  error.rs  filesystem.rs  gui.rs  lib.rs  logger.rs  main.rs  network.rs  nix.rs  profiles.rs  saved_state.rs  server.rs  server_list.rs  state.rs  updater.rs  windows.rs
client/src/cli/: clap.yml  mod.rs  parse.rs
client/src/config/: mod.rs
client/src/gui/: custom_widgets.rs  mod.rs  oldstyle.rs  rss_feed.rs  style.rs  time.rs  update.rs  widget.rs
client/src/gui/components/: announcement_panel.rs  changelog.rs  changelog_panel.rs  community_showcase.rs  community_showcase_panel.rs  game_panel.rs  logo_panel.rs  mod.rs  news.rs  news_panel.rs  server_browser_panel.rs  settings_panel.rs
client/src/gui/style/: button.rs  container.rs  menu.rs  mod.rs  pick_list.rs  progress_bar.rs  rule.rs  scrollable.rs  text.rs  text_input.rs  tooltip.rs
client/src/gui/subscriptions/: download.rs  mod.rs  ping_servers.rs  process.rs  repeat_message.rs
client/src/gui/views/: default.rs  default_old.rs  mod.rs  profiles.rs  update.rs
client/src/gui/widgets/: changelog.rs  mod.rs  news.rs
client/src/interface/: mod.rs
client/src/interface/cli/: clap.yml  downloadbar.rs  mod.rs
client/src/interface/gui/: mod.rs
client/src/io/: fs.rs  mod.rs  process.rs
client/src/models/: mod.rs  profile.rs
client/src/net/: client.rs  download.rs  mod.rs  ping.rs  server_list.rs
client/src/update/: afterburner.rs  compare.rs  download.rs  local_directory.rs  mod.rs  remote_zip.rs
client/wix/: WixUI_FeatureTree.wxs  main.wxs
server/: .airshipper-env.example  .env  .env.example  Cargo.toml  Dockerfile  build_server.ps1  build_server.sh  docker-compose.yml  publish_server.ps1  publish_server.sh  rustfmt.toml
server/helm/: Chart.yaml  values.yaml
server/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  prometheus.yaml  service.yaml  serviceaccount.yaml
server/migrations/: 20210418132518_create_artifacts.sql  20240815010101_create_artifacts.down.sql  20240815010101_create_artifacts.up.sql
server/migrations/2020-03-25-150908_create_artifacts/: down.sql  up.sql
server/migrations/2022-03-09-154518_replace_platform_with_os_and_arch/: down.sql  up.sql
server/src/: db.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  prune.rs  webhook.rs
server/src/config/: loading.rs  mod.rs
server/src/db/: actions.rs  fs.rs  mod.rs  s3.rs  schema.rs  sqlite.rs
server/src/fairings/: db.rs  mod.rs  prometheus.rs  statistics.rs
server/src/guards/: gitlab_event.rs  gitlab_secret.rs  mod.rs  user_agent.rs
server/src/models/: artifact.rs  db.rs  gitlab.rs  mod.rs
server/src/models/v1/: artifact.rs
server/src/params/: channel.rs  mod.rs  platform.rs
server/src/routes/: api.rs  catchers.rs  gitlab.rs  metrics.rs  mod.rs  user.rs
server/src/routes/v1/: catchers.rs  gitlab.rs  mod.rs
server/tests/: airshipper.rs  user.rs  webhook.rs
server/tests/webhook/: artifacts.json
src/: main.rs
wix/: main.wxs
zippy/: Cargo.toml
zippy/src/: compare.rs  local_directory.rs  main.rs  partial_buffer.rs  remote_zip.rs  util.rs
