cargo-features = []

[workspace]
members = [
	"client",
	"server",
]
resolver = "2"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.debuginfo]
inherits= 'dev'
opt-level = 0
debug = true

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort" # don't need unwinding so we can skip including the landing pads for that
# line tables so we can have useful backtraces for in-house crates
[profile.release.package."airshipper"]
debug = 1
[profile.release.package."airshipper-server"]
debug = 1

[workspace.metadata.nix]
systems = ["x86_64-linux"]
