[package]
name = "airshipper"
description = "Provides automatic updates for the voxel RPG Veloren."
version = "0.13.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = true
default-run = "airshipper"
exclude = ["assets/fonts/GoNotoCurrent.ttf"]

license = "GPL-3.0"
homepage = "https://www.veloren.net"
repository = "https://gitlab.com/veloren/airshipper"

[package.metadata.nix]
build = true
app = true

[package.metadata.nix.desktopFile]
name = "Airshipper"
icon = "./client/assets/logo.ico"

[badges]
maintenance = { status = "actively-developed" }

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI.
bundled = ["openssl-sys"]
bundled_font = []

[dependencies]
veloren-serverbrowser-api = "0.3.1"

# Cli
clap = { version = "3.1.18", features = ["cargo", "derive"] }
indicatif = "0.17"
rustyline = "13"
colored = "2.0"

# UI
iced = { version = "0.8.0", features = ["tokio", "image", "debug"] }

# Logging
tracing = { version = "0.1.21", features = ["log"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "tracing-log",
] }
termcolor = "1.1.3"
tracing-appender = "0.2.0"
tracing-log = "0.2.0"
regex = "1.10"
# Networking
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
    "http2",
] }
surge-ping = "0.8.0"
socket2 = "0.5.5"

# Parsing
pulldown-cmark = "0.8.0"
strip_markdown = "0.2.0"
html2text = "0.12.0"
serde = "1.0.116"
semver = "1"
rss = "2.0.7"
ron = "0.8.1"
zip = "0.6.6"
zip-core = "0.0.4"
crc32fast = "1.4.2"
flate2 = "1.0"
url = "2.2.2"
# Other
image = { version = "0.24.8", default-features = false, features = ["ico"] }
tokio = { version = "1.38", features = [
    "macros",
    "io-util",
    "process",
    "fs",
    "rt-multi-thread",
    "net",
] }
tokio-stream = { version = "0.1.6", features = ["io-util"] }
futures-util = "0.3.15"
derive_more = "0.99.11"
find_folder = "0.3.0"
lazy_static = "1.4.0"
thiserror = "1.0.20"
bytesize = "1.0.1"
bytes = "1"
opener = "0.6.1"
dirs = { package = "dirs-next", version = "2.0.0" }
md5 = "0.7.0"
rand = "0.8.5"
chrono = { version = "0.4.22", features = ["serde"] }
country-parser = "0.1.1"

# bundle all the things!
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
self_update = { version = "0.41.0", features = ["archive-zip"] }

[build-dependencies]
winresource = "0.1.15"
