[package]
name = "airshipper-server"
version = "0.10.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = false

[package.metadata.nix]
build = true
app = true

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI
bundled = ["openssl-sys"]

[dependencies]
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio = { version = "1.7.1", features = ["fs", "rt-multi-thread"] }
# logging
termcolor = "1.1"
tracing = { version = "0.1.21", features = ["log"] }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.7", default-features = false, features = ["env-filter", "fmt", "time", "ansi", "smallvec", "tracing-log"]}
tracing-log = "0.1.1"
# config handling
ron = "0.7"
regex = "1.5"

# Webserver
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
# Networking
reqwest = { version = "0.11.4", features = ["stream"] }
# Github
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", rev = "c78edcd87fa5edcd5a6d0d0878b2a8d020802c40" }
# Serialising/Deserialising
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.59"
# Database
diesel = { version = "1.4.7", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
# Error handling
thiserror = "1.0.22"
# other
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
prometheus = "0.12"
futures = "0.3.8"
dotenv = "0.15.0"
bytes = "1"
md5 = "0.7.0"
url = "2.2.2"
# bundle all the things!
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl-sys = { version = "*", features = ["vendored"], optional = true }

[build-dependencies]
# required to work around diesel being incompatible with resolver = "2"
diesel = { version = "1.4.7", features = ["chrono", "sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }