[package]
name = "airshipper-server"
version = "0.11.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = false

[package.metadata.nix]
build = true
app = true

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI
bundled = ["openssl-sys"]

[dependencies]
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio = { version = "1.25", features = ["fs", "rt-multi-thread"] }
# logging
termcolor = "1.2"
tracing = { version = "0.1.21", features = ["log"] }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "tracing-log",
] }
tracing-log = "0.2"
# config handling
ron = "0.8"
regex = "1.10"

axum = "0.7"
tower-http = { version = "0.5.2", features = ["fs"] }
# Networking
reqwest = { version = "0.11.4", features = ["stream"] }
# Github
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", rev = "c78edcd87fa5edcd5a6d0d0878b2a8d020802c40" }
# Serialising/Deserialising
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.59"
# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "any",
] }
# Error handling
thiserror = "1.0.22"
# other
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
prometheus = "0.13"
futures = "0.3.8"
dotenv = "0.15.0"
bytes = "1"
md5 = "0.7.0"
url = "2.2.2"
# bundle all the things!
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl-sys = { version = "*", features = ["vendored"], optional = true }
