[package]
name = "airshipper-server"
version = "0.12.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = false

[package.metadata.nix]
build = true
app = true

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI
bundled = ["openssl-sys"]

[dependencies]
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio = { version = "1.39", features = ["fs", "rt-multi-thread"] }
# logging
termcolor = "1.4"
tracing = { version = "0.1.21", features = ["log"] }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "tracing-log",
] }
tracing-log = "0.2"
# config handling
ron = "0.8"
regex = "1.10"

axum = "0.7"
tower-http = { version = "0.5.2", features = ["fs"] }
# Networking
reqwest = { version = "0.12", features = ["stream"] }
# Github
octocrab = { version = "0.39" }
# Serialising/Deserialising
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.59"
# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "any",
] }
# Error handling
thiserror = "1.0.22"
# other
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
prometheus = "0.13"
futures = "0.3.8"
bytes = "1"
md5 = "0.7.0"
url = "2.2.2"
# bundle all the things!
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl-sys = { version = "*", features = ["vendored"], optional = true }
