[package]
name = "zippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip_structs = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["native-tls-alpn"] }
tokio = { version = "1.30", features = ["full"] }
bytes = { version = "1.0" }
crc = "3.2.1"
