[package]
name = "zippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip-core = "0.0.3"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["native-tls-alpn"] }
tokio = { version = "1.38", features = [
    "fs",
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
bytes = { version = "1.0" }
crc32fast = "1.4.2"
flate2 = "1.0"
